--- a/time.css
+++ b/time.css
@@ -40,7 +40,7 @@ body{
 	line-height: 40px;
 	font-family: digital, arial, verdana;
 	text-align: center;
-	color: #fff;
+	color: #000;
 	
 	position: absolute;
 	top: 0;
